--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Font -->
+    <link rel="preload" href="./assets/fonts/FreePixel.ttf" as="font" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <title>Pixel Invader</title>
 </head>
 <body>
-    
+    <canvas id="board" width="480" height="520"></canvas>
+
+    <script src="./assets/js/app.js"></script>
 </body>
 </html>
