--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Font -->
     <link rel="preload" href="./assets/fonts/FreePixel.ttf" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <title>Pixel Invader</title>
+    <link rel="shortcut icon" href="./assets/img/icon.png" type="image/png">
+    <title>Pixel Invaders</title>
 </head>
 <body>
+    <img id="banner" src="./assets/img/banner.png" alt="PixelInvader" width="350px">
     <canvas id="board" width="480" height="520"></canvas>
-
     <script src="./assets/js/app.js"></script>
 </body>
 </html>
